[package]
name = "dig-n-ripoff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.18.0", features = ["specs-derive"] }
unsafe-send-sync = "0.1.0"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image","gfx","mixer"]